...
    <string name="report_details_resolved_message">With everything taken care of, we\'ll take you back to the reports.</string>
    <string name="report_details_canceled_title">Deleted. If the situation evolves, feel free to reach out again.</string>
    <string name="report_details_canceled_message">In the meantime, we\'ll take you back to the reports.</string>
    <string name="report_details_back_reports">Back to reports</string>
    <string name="report_details_show_less">Show less</string>
    <string name="report_details_read_more">Read more</string>
    <string name="report_details_cancel_first">Delete this report?</string>
    <string name="report_details_cancel_second">This action is irreversible and will permanently delete the report.</string>
    <string name="report_details_cancel_third">Delete report</string>
    <string name="report_details_self_assign_first">Assign this report to you?</string>
    <string name="report_details_self_assign_second">You will be marked as the person handling this situation.</string>
    <string name="report_details_self_assign_third">Assign to me</string>
    <string name="report_details_resolve_first">Mark this report as resolved?</string>
    <string name="report_details_resolve_second">This action is irreversible and will permanently delete the report.</string>
    <string name="report_details_resolve_third">Resolve</string>
    <string name="report_details_unself_assign_first">Stop handling this report?</string>
    <string name="report_details_unself_assign_second">You will no longer be assigned to this report.</string>
    <string name="report_details_unself_assign_third">Unassign</string>
    <string name="report_details_actions_dismiss">No, keep it</string>
    <string name="report_details_button_delete">Delete</string>
    <string name="report_details_navigate">Navigate to report</string>
    <string name="report_details_google_maps">Open in Google Maps</string>
    <string name="report_details_copy">Copy location</string>
    <string name="report_details_share">Share location</string>
    <string name="report_details_maps_not_installed">Google Maps is not installed.</string>
...
